src/test/ui/did_you_mean/issue-53280-expected-float-found-integer-literal.stderr
error[E0308]: mismatched types
  --> $DIR/issue-53280-expected-float-found-integer-literal.rs:2:24
   |
LL |     let sixteen: f32 = 16;
   |                        ^^
   |                        |
   |                        expected f32, found integer
   |                        help: use a float literal: `16.0`
   |
   = note: expected type `f32`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/issue-53280-expected-float-found-integer-literal.rs:5:38
   |
LL |     let a_million_and_seventy: f64 = 1_000_070;
   |                                      ^^^^^^^^^
   |                                      |
   |                                      expected f64, found integer
   |                                      help: use a float literal: `1_000_070.0`
   |
   = note: expected type `f64`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/issue-53280-expected-float-found-integer-literal.rs:8:30
   |
LL |     let negative_nine: f32 = -9;
   |                              ^^
   |                              |
   |                              expected f32, found integer
   |                              help: use a float literal: `-9.0`
   |
   = note: expected type `f32`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/issue-53280-expected-float-found-integer-literal.rs:15:30
   |
LL |     let sixteen_again: f64 = 0x10;
   |                              ^^^^ expected f64, found integer
   |
   = note: expected type `f64`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/issue-53280-expected-float-found-integer-literal.rs:17:30
   |
LL |     let and_once_more: f32 = 0o20;
   |                              ^^^^ expected f32, found integer
   |
   = note: expected type `f32`
              found type `{integer}`

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0308`.
